--- a/resume-tailor-backend/requirements.txt
+++ b/resume-tailor-backend/requirements.txt
@@ -24,6 +24,7 @@ passlib==1.7.4
 pdfminer.six==20250506
 pdfplumber==0.11.7
 pillow==11.3.0
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
